--- a/style.css
+++ b/style.css
@@ -23,11 +23,18 @@ body {
   position: absolute;
   top: 0;
   left: 840px;
-  width: 500px; 
+  width: 550px; 
   height: 720px; 
   padding: 20px;
   background-color: #f0f0f0;
   border: 1px solid #666;
+}
+
+.line-path {
+  fill: none;
+  stroke: black;
+  stroke-width: 1.5;
+  stroke-linejoin: round;
 }
 
 .btn-div {
